--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,53 @@
 .mainApp {
-    position: absolute;
-    margin: auto;
+    position: fixed;
     left: 50%;
     top: 50%;
+    margin-top: -150px;
+    margin-left: -130px;
+}
+.searchBar {
+    margin-top: 25px;
+    margin-left: -140px;
 }
 #searchBar {
-    max-width: 270px;
-    width: 100%;
-    height: 20px;
-    border-radius: 20px;
+    height:45px;
+    width: 520px;
+    font-size: 20px;
+    border-radius:30px;
+    padding-left: 30px;
+    padding-right: 30px;
+    border:1px solid #dcdcdc;
+    transition-duration: 0.1s;
 }
-.searchBar:hover, .search:focus {
-    border: 1.5px solid #4e4e4e;
-    background-color: white;
-  }
+
+#searchBar:hover {
+    box-shadow: 0 0 8px rgba(163, 123, 123, 0.2); 
+}
+.searchingClass {
+    text-align: center;
+    display: inline-block;
+    position: absolute;
+    margin-top: 30px;
+
+}
+
+.buttonSubmit {
+    padding: 10px 22px;
+    background-color: #dfdfdf4b; 
+    font-size: 15px;
+    font-weight: 200;
+    border: none;
+    border-radius: 5px;
+    transition-duration: 0.1s;
+}
+
+.buttonSubmit:hover {
+    color: black;
+    border: 1px solid #a1a1a1d2;
+    border-radius: 5px;
+}
+
+.infoHeader {
+    text-align: right;
+    padding: 12px;
+}
