--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
     position: fixed;
     left: 50%;
     top: 50%;
-    margin-top: -150px;
+    margin-top: -180px;
     margin-left: -130px;
 }
 .searchBar {
@@ -23,6 +23,7 @@
 #searchBar:hover {
     box-shadow: 0 0 8px rgba(163, 123, 123, 0.2); 
 }
+
 .searchingClass {
     text-align: center;
     display: inline-block;
@@ -47,7 +48,29 @@
     border-radius: 5px;
 }
 
-.infoHeader {
+.header {
     text-align: right;
-    padding: 12px;
+    padding: 8px;
+}
+
+.signBtn {
+    background-color: rgb(66,133,244);
+    color: white;
+    padding: 8px 14px;
+    font-size: 12px;
+    font-weight: bold;
+    border-radius: 4px;
+    border: none;
+}
+
+.headerGmail {
+    padding-right: 15px;
+    font-weight: 200;
+    font-size: 16px;
+}
+
+.headerPics {
+    padding-right: 15px;
+    font-weight: 200;
+    font-size: 16px;
 }
